src/y.output
Terminals which are not used

   NOT_TOKEN


Grammar

    0 $accept: Main $end

    1 Main: TYPE MAIN_TOKEN OPEN_PARENTHESIS_TOKEN VOID_TOKEN CLOSE_PARENTHESIS_TOKEN MainBlock

    2 Variables: Variable SEMICOLON_TOKEN

    3 Variable: TYPE NAME
    4         | MUSIC_TYPE NAME

    5 Block: OPEN_BRACKET_TOKEN Content CLOSE_BRACKET_TOKEN

    6 MainBlock: OPEN_BRACKET_TOKEN Content CLOSE_BRACKET_TOKEN

    7 Content: Variables Content
    8        | Variable ASSIGN_TOKEN Expression SEMICOLON_TOKEN Content
    9        | NAME ASSIGN_TOKEN Expression SEMICOLON_TOKEN Content
   10        | WHILE_TOKEN OPEN_PARENTHESIS_TOKEN LogicalExpression CLOSE_PARENTHESIS_TOKEN Block Content
   11        | FOR_TOKEN OPEN_PARENTHESIS_TOKEN ForExpression SEMICOLON_TOKEN LogicalExpression SEMICOLON_TOKEN ForExpression CLOSE_PARENTHESIS_TOKEN Block Content
   12        | IF_TOKEN OPEN_PARENTHESIS_TOKEN LogicalExpression CLOSE_PARENTHESIS_TOKEN Block Content
   13        | IF_TOKEN OPEN_PARENTHESIS_TOKEN LogicalExpression CLOSE_PARENTHESIS_TOKEN Block ELSE_TOKEN Block Content
   14        | SWITCH_TOKEN OPEN_PARENTHESIS_TOKEN Expression CLOSE_PARENTHESIS_TOKEN OPEN_BRACKET_TOKEN Cases CLOSE_BRACKET_TOKEN Content
   15        | DO_TOKEN Block WHILE_TOKEN OPEN_PARENTHESIS_TOKEN LogicalExpression CLOSE_PARENTHESIS_TOKEN SEMICOLON_TOKEN Content
   16        | BREAK_TOKEN SEMICOLON_TOKEN Content
   17        | WRITE_TOKEN OPEN_PARENTHESIS_TOKEN NAME CLOSE_PARENTHESIS_TOKEN SEMICOLON_TOKEN Content
   18        | WRITE_TOKEN OPEN_PARENTHESIS_TOKEN MUSIC CLOSE_PARENTHESIS_TOKEN SEMICOLON_TOKEN Content
   19        | /* empty */

   20 ForExpression: NAME ASSIGN_TOKEN Expression
   21              | ForExpression COMMA_TOKEN ForExpression
   22              | /* empty */

   23 Expression: LogicalExpression
   24           | ArithmeticalExpression
   25           | MUSIC

   26 ArithmeticalExpression: Termin
   27                       | OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN MULT_TOKEN OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN
   28                       | OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN DIV_TOKEN OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN
   29                       | OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN MOD_TOKEN OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN
   30                       | OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN PLUS_TOKEN OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN
   31                       | OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN MINUS_TOKEN OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN

   32 RelationalExpression: OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN LT_TOKEN OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN
   33                     | OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN GT_TOKEN OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN
   34                     | OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN LE_TOKEN OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN
   35                     | OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN GE_TOKEN OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN
   36                     | OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN EQ_TOKEN OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN
   37                     | OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN NE_TOKEN OPEN_PARENTHESIS_TOKEN ArithmeticalExpression CLOSE_PARENTHESIS_TOKEN

   38 LogicalExpression: BooleanValue
   39                  | RelationalExpression
   40                  | LogicalExpression AND_TOKEN LogicalExpression
   41                  | LogicalExpression OR_TOKEN LogicalExpression
   42                  | OPEN_PARENTHESIS_TOKEN LogicalExpression CLOSE_PARENTHESIS_TOKEN

   43 BooleanValue: TRUE_TOKEN
   44             | FALSE_TOKEN

   45 Termin: NAME
   46       | NUMBER

   47 Cases: CASE_TOKEN Expression COLON_TOKEN Block Cases
   48      | DEFAULT_TOKEN COLON_TOKEN Block


Terminals, with rules where they appear

$end (0) 0
error (256)
NAME (258) 3 4 9 17 20 45
MUSIC (259) 18 25
NUMBER (260) 46
TYPE (261) 1 3
MUSIC_TYPE (262) 4
TRUE_TOKEN (263) 43
FALSE_TOKEN (264) 44
VOID_TOKEN (265) 1
MAIN_TOKEN (266) 1
IF_TOKEN (267) 12 13
ELSE_TOKEN (268) 13
FOR_TOKEN (269) 11
DO_TOKEN (270) 15
WHILE_TOKEN (271) 10 15
SWITCH_TOKEN (272) 14
CASE_TOKEN (273) 47
DEFAULT_TOKEN (274) 48
BREAK_TOKEN (275) 16
PLUS_TOKEN (276) 30
MINUS_TOKEN (277) 31
MULT_TOKEN (278) 27
DIV_TOKEN (279) 28
MOD_TOKEN (280) 29
AND_TOKEN (281) 40
OR_TOKEN (282) 41
NOT_TOKEN (283)
NE_TOKEN (284) 37
ASSIGN_TOKEN (285) 8 9 20
GT_TOKEN (286) 33
LT_TOKEN (287) 32
GE_TOKEN (288) 35
LE_TOKEN (289) 34
EQ_TOKEN (290) 36
OPEN_PARENTHESIS_TOKEN (291) 1 10 11 12 13 14 15 17 18 27 28 29 30
    31 32 33 34 35 36 37 42
CLOSE_PARENTHESIS_TOKEN (292) 1 10 11 12 13 14 15 17 18 27 28 29 30
    31 32 33 34 35 36 37 42
OPEN_BRACKET_TOKEN (293) 5 6 14
CLOSE_BRACKET_TOKEN (294) 5 6 14
COLON_TOKEN (295) 47 48
SEMICOLON_TOKEN (296) 2 8 9 11 15 16 17 18
COMMA_TOKEN (297) 21
WRITE_TOKEN (298) 17 18


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
Main (45)
    on left: 1, on right: 0
Variables (46)
    on left: 2, on right: 7
Variable (47)
    on left: 3 4, on right: 2 8
Block (48)
    on left: 5, on right: 10 11 12 13 15 47 48
MainBlock (49)
    on left: 6, on right: 1
Content (50)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19, on right: 5 6 7 8
    9 10 11 12 13 14 15 16 17 18
ForExpression (51)
    on left: 20 21 22, on right: 11 21
Expression (52)
    on left: 23 24 25, on right: 8 9 14 20 47
ArithmeticalExpression (53)
    on left: 26 27 28 29 30 31, on right: 24 27 28 29 30 31 32 33 34
    35 36 37
RelationalExpression (54)
    on left: 32 33 34 35 36 37, on right: 39
LogicalExpression (55)
    on left: 38 39 40 41 42, on right: 10 11 12 13 15 23 40 41 42
BooleanValue (56)
    on left: 43 44, on right: 38
Termin (57)
    on left: 45 46, on right: 26
Cases (58)
    on left: 47 48, on right: 14 47


state 0

    0 $accept: . Main $end

    TYPE  shift, and go to state 1

    Main  go to state 2


state 1

    1 Main: TYPE . MAIN_TOKEN OPEN_PARENTHESIS_TOKEN VOID_TOKEN CLOSE_PARENTHESIS_TOKEN MainBlock

    MAIN_TOKEN  shift, and go to state 3


state 2

    0 $accept: Main . $end

    $end  shift, and go to state 4


state 3

    1 Main: TYPE MAIN_TOKEN . OPEN_PARENTHESIS_TOKEN VOID_TOKEN CLOSE_PARENTHESIS_TOKEN MainBlock

    OPEN_PARENTHESIS_TOKEN  shift, and go to state 5


state 4

    0 $accept: Main $end .

    $default  accept


state 5

    1 Main: TYPE MAIN_TOKEN OPEN_PARENTHESIS_TOKEN . VOID_TOKEN CLOSE_PARENTHESIS_TOKEN MainBlock

    VOID_TOKEN  shift, and go to state 6


state 6

    1 Main: TYPE MAIN_TOKEN OPEN_PARENTHESIS_TOKEN VOID_TOKEN . CLOSE_PARENTHESIS_TOKEN MainBlock

    CLOSE_PARENTHESIS_TOKEN  shift, and go to state 7


state 7

    1 Main: TYPE MAIN_TOKEN OPEN_PARENTHESIS_TOKEN VOID_TOKEN CLOSE_PARENTHESIS_TOKEN . MainBlock

    OPEN_BRACKET_TOKEN  shift, and go to state 8

    MainBlock  go to state 9


state 8

    6 MainBlock: OPEN_BRACKET_TOKEN . Content CLOSE_BRACKET_TOKEN

    NAME          shift, and go to state 10
    TYPE          shift, and go to state 11
    MUSIC_TYPE    shift, and go to state 12
    IF_TOKEN      shift, and go to state 13
    FOR_TOKEN     shift, and go to state 14
    DO_TOKEN      shift, and go to state 15
    WHILE_TOKEN   shift, and go to state 16
    SWITCH_TOKEN  shift, and go to state 17
    BREAK_TOKEN   shift, and go to state 18
    WRITE_TOKEN   shift, and go to state 19

    $default  reduce using rule 19 (Content)

    Variables  go to state 20
    Variable   go to state 21
    Content    go to state 22


state 9

    1 Main: TYPE MAIN_TOKEN OPEN_PARENTHESIS_TOKEN VOID_TOKEN CLOSE_PARENTHESIS_TOKEN MainBlock .

    $default  reduce using rule 1 (Main)


state 10

    9 Content: NAME . ASSIGN_TOKEN Expression SEMICOLON_TOKEN Content

    ASSIGN_TOKEN  shift, and go to state 23


state 11

    3 Variable: TYPE . NAME

    NAME  shift, and go to state 24


state 12

    4 Variable: MUSIC_TYPE . NAME

    NAME  shift, and go to state 25


state 13

   12 Content: IF_TOKEN . OPEN_PARENTHESIS_TOKEN LogicalExpression CLOSE_PARENTHESIS_TOKEN Block Content
   13        | IF_TOKEN . OPEN_PARENTHESIS_TOKEN LogicalExpression CLOSE_PARENTHESIS_TOKEN Block ELSE_TOKEN Block Content

    OPEN_PARENTHESIS_TOKEN  shift, and go to state 26


state 14

   11 Content: FOR_TOKEN . OPEN_PARENTHESIS_TOKEN ForExpression SEMICOLON_TOKEN LogicalExpression SEMICOLON_TOKEN ForExpression CLOSE_PARENTHESIS_TOKEN Block Content

    OPEN_PARENTHESIS_TOKEN  shift, and go to state 27


state 15

   15 Content: DO_TOKEN . Block WHILE_TOKEN OPEN_PARENTHESIS_TOKEN LogicalExpression CLOSE_PARENTHESIS_TOKEN SEMICOLON_TOKEN Content

    OPEN_BRACKET_TOKEN  shift, and go to state 28

    Block  go to state 29


state 16

   10 Content: WHILE_TOKEN . OPEN_PARENTHESIS_TOKEN LogicalExpression CLOSE_PARENTHESIS_TOKEN Block Content

    OPEN_PARENTHESIS_TOKEN  shift, and go to state 30


state 17

   14 Content: SWITCH_TOKEN . OPEN_PARENTHESIS_TOKEN Expression CLOSE_PARENTHESIS_TOKEN OPEN_BRACKET_TOKEN Cases CLOSE_BRACKET_TOKEN Content

    OPEN_PARENTHESIS_TOKEN  shift, and go to state 31


state 18

   16 Content: BREAK_TOKEN . SEMICOLON_TOKEN Content

    SEMICOLON_TOKEN  shift, and go to state 32


state 19

   17 Content: WRITE_TOKEN . OPEN_PARENTHESIS_TOKEN NAME CLOSE_PARENTHESIS_TOKEN SEMICOLON_TOKEN Content
   18        | WRITE_TOKEN . OPEN_PARENTHESIS_TOKEN MUSIC CLOSE_PARENTHESIS_TOKEN SEMICOLON_TOKEN Content

    OPEN_PARENTHESIS_TOKEN  shift, and go to state 33


state 20

    7 Content: Variables . Content

    NAME          shift, and go to state 10
    TYPE          shift, and go to state 11
    MUSIC_TYPE    shift, and go to state 12
    IF_TOKEN      shift, and go to state 13
    FOR_TOKEN     shift, and go to state 14
    DO_TOKEN      shift, and go to state 15
    WHILE_TOKEN   shift, and go to state 16
    SWITCH_TOKEN  shift, and go to state 17
    BREAK_TOKEN   shift, and go to state 18
    WRITE_TOKEN   shift, and go to state 19

    $default  reduce using rule 19 (Content)

    Variables  go to state 20
    Variable   go to state 21
    Content    go to state 34


state 21

    2 Variables: Variable . SEMICOLON_TOKEN
    8 Content: Variable . ASSIGN_TOKEN Expression SEMICOLON_TOKEN Content

    ASSIGN_TOKEN     shift, and go to state 35
    SEMICOLON_TOKEN  shift, and go to state 36


state 22

    6 MainBlock: OPEN_BRACKET_TOKEN Content . CLOSE_BRACKET_TOKEN

    CLOSE_BRACKET_TOKEN  shift, and go to state 37


state 23

    9 Content: NAME ASSIGN_TOKEN . Expression SEMICOLON_TOKEN Content

    NAME                    shift, and go to state 38
    MUSIC                   shift, and go to state 39
    NUMBER                  shift, and go to state 40
    TRUE_TOKEN              shift, and go to state 41
    FALSE_TOKEN             shift, and go to state 42
    OPEN_PARENTHESIS_TOKEN  shift, and go to state 43

    Expression              go to state 44
    ArithmeticalExpression  go to state 45
    RelationalExpression    go to state 46
    LogicalExpression       go to state 47
    BooleanValue            go to state 48
    Termin                  go to state 49


state 24

    3 Variable: TYPE NAME .

    $default  reduce using rule 3 (Variable)


state 25

    4 Variable: MUSIC_TYPE NAME .

    $default  reduce using rule 4 (Variable)


state 26

   12 Content: IF_TOKEN OPEN_PARENTHESIS_TOKEN . LogicalExpression CLOSE_PARENTHESIS_TOKEN Block Content
   13        | IF_TOKEN OPEN_PARENTHESIS_TOKEN . LogicalExpression CLOSE_PARENTHESIS_TOKEN Block ELSE_TOKEN Block Content

    TRUE_TOKEN              shift, and go to state 41
    FALSE_TOKEN             shift, and go to state 42
    OPEN_PARENTHESIS_TOKEN  shift, and go to state 50

    RelationalExpression  go to state 46
    LogicalExpression     go to state 51
    BooleanValue          go to state 48


state 27

   11 Content: FOR_TOKEN OPEN_PARENTHESIS_TOKEN . ForExpression SEMICOLON_TOKEN LogicalExpression SEMICOLON_TOKEN ForExpression CLOSE_PARENTHESIS_TOKEN Block Content

    NAME  shift, and go to state 52

    $default  reduce using rule 22 (ForExpression)

    ForExpression  go to state 53


state 28

    5 Block: OPEN_BRACKET_TOKEN . Content CLOSE_BRACKET_TOKEN

    NAME          shift, and go to state 10
    TYPE          shift, and go to state 11
    MUSIC_TYPE    shift, and go to state 12
    IF_TOKEN      shift, and go to state 13
    FOR_TOKEN     shift, and go to state 14
    DO_TOKEN      shift, and go to state 15
    WHILE_TOKEN   shift, and go to state 16
    SWITCH_TOKEN  shift, and go to state 17
    BREAK_TOKEN   shift, and go to state 18
    WRITE_TOKEN   shift, and go to state 19

    $default  reduce using rule 19 (Content)

    Variables  go to state 20
    Variable   go to state 21
    Content    go to state 54


state 29

   15 Content: DO_TOKEN Block . WHILE_TOKEN OPEN_PARENTHESIS_TOKEN LogicalExpression CLOSE_PARENTHESIS_TOKEN SEMICOLON_TOKEN Content

    WHILE_TOKEN  shift, and go to state 55


state 30

   10 Content: WHILE_TOKEN OPEN_PARENTHESIS_TOKEN . LogicalExpression CLOSE_PARENTHESIS_TOKEN Block Content

    TRUE_TOKEN              shift, and go to state 41
    FALSE_TOKEN             shift, and go to state 42
    OPEN_PARENTHESIS_TOKEN  shift, and go to state 50

    RelationalExpression  go to state 46
    LogicalExpression     go to state 56
    BooleanValue          go to state 48


state 31

   14 Content: SWITCH_TOKEN OPEN_PARENTHESIS_TOKEN . Expression CLOSE_PARENTHESIS_TOKEN OPEN_BRACKET_TOKEN Cases CLOSE_BRACKET_TOKEN Content

    NAME                    shift, and go to state 38
    MUSIC                   shift, and go to state 39
    NUMBER                  shift, and go to state 40
    TRUE_TOKEN              shift, and go to state 41
    FALSE_TOKEN             shift, and go to state 42
    OPEN_PARENTHESIS_TOKEN  shift, and go to state 43

    Expression              go to state 57
    ArithmeticalExpression  go to state 45
    RelationalExpression    go to state 46
    LogicalExpression       go to state 47
    BooleanValue            go to state 48
    Termin                  go to state 49


state 32

   16 Content: BREAK_TOKEN SEMICOLON_TOKEN . Content

    NAME          shift, and go to state 10
    TYPE          shift, and go to state 11
    MUSIC_TYPE    shift, and go to state 12
    IF_TOKEN      shift, and go to state 13
    FOR_TOKEN     shift, and go to state 14
    DO_TOKEN      shift, and go to state 15
    WHILE_TOKEN   shift, and go to state 16
    SWITCH_TOKEN  shift, and go to state 17
    BREAK_TOKEN   shift, and go to state 18
    WRITE_TOKEN   shift, and go to state 19

    $default  reduce using rule 19 (Content)

    Variables  go to state 20
    Variable   go to state 21
    Content    go to state 58


state 33

   17 Content: WRITE_TOKEN OPEN_PARENTHESIS_TOKEN . NAME CLOSE_PARENTHESIS_TOKEN SEMICOLON_TOKEN Content
   18        | WRITE_TOKEN OPEN_PARENTHESIS_TOKEN . MUSIC CLOSE_PARENTHESIS_TOKEN SEMICOLON_TOKEN Content

    NAME   shift, and go to state 59
    MUSIC  shift, and go to state 60


state 34

    7 Content: Variables Content .

    $default  reduce using rule 7 (Content)


state 35

    8 Content: Variable ASSIGN_TOKEN . Expression SEMICOLON_TOKEN Content

    NAME                    shift, and go to state 38
    MUSIC                   shift, and go to state 39
    NUMBER                  shift, and go to state 40
    TRUE_TOKEN              shift, and go to state 41
    FALSE_TOKEN             shift, and go to state 42
    OPEN_PARENTHESIS_TOKEN  shift, and go to state 43

    Expression              go to state 61
    ArithmeticalExpression  go to state 45
    RelationalExpression    go to state 46
    LogicalExpression       go to state 47
    BooleanValue            go to state 48
    Termin                  go to state 49


state 36

    2 Variables: Variable SEMICOLON_TOKEN .

    $default  reduce using rule 2 (Variables)


state 37

    6 MainBlock: OPEN_BRACKET_TOKEN Content CLOSE_BRACKET_TOKEN .

    $default  reduce using rule 6 (MainBlock)


state 38

   45 Termin: NAME .

    $default  reduce using rule 45 (Termin)


state 39

   25 Expression: MUSIC .

    $default  reduce using rule 25 (Expression)


state 40

   46 Termin: NUMBER .

    $default  reduce using rule 46 (Termin)


state 41

   43 BooleanValue: TRUE_TOKEN .

    $default  reduce using rule 43 (BooleanValue)


state 42

   44 BooleanValue: FALSE_TOKEN .

    $default  reduce using rule 44 (BooleanValue)


state 43
